<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/library"
        android:enabled="true"
        android:title="@string/articles"
        android:icon="@drawable/baseline_library_books_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/camera"
        android:enabled="true"
        android:title="@string/camera"
        android:icon="@drawable/baseline_photo_camera_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_outline_24"
        app:showAsAction="ifRoom"/>

</menu>