<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
    <TextView
        android:id="@+id/AppName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:textAlignment="center"
        android:textColor="@color/cap"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="115dp"
        android:layout_height="110dp"
        android:padding="10dp"
        android:drawablePadding="20dp"
        android:src="@drawable/buddy_photoroom_transformed__1_"
        app:layout_constraintLeft_toLeftOf="@+id/AppName"
        app:layout_constraintTop_toTopOf="@+id/AppName" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="25dp">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/cap"
        app:layout_constraintTop_toBottomOf="@+id/image_view"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:background="@drawable/custom_edit"
        android:drawableStart="@drawable/baseline_person_24"
        android:padding="5dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.320"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />
            />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/custom_edit"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.320"
        app:layout_constraintTop_toBottomOf="@+id/username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/button"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/cap"
                app:cornerRadius="50dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_edit"
                android:layout_centerHorizontal="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.320"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/cap"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/go"
            android:padding="5dp"
            android:drawablePadding="5dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/face"
            android:padding="10dp"
            android:drawablePadding="10dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/apple"
            />
    </LinearLayout>

</LinearLayout>